--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,88 @@
-#menu {
-    display: flex;
-    list-style: none;
-    gap: 0.5rem;
+
+
+*{
+    font-family: 'Chivo Mono';
+    margin:0; 
+    padding:0;
+    box-sizing: border-box;
+    outline:none;
+    border:none;
+    text-decoration: none;
 }
+
+html{
+    font-size:110%;
+    overflow-x:hidden;
+    scroll-behavior: smooth;
+}
+
+.navbar{
+    padding:2rem 10%;
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    background:#FFFF;
+    border-bottom: .2rem solid #334;
+    position:relative;
+}
+
+a.logo{
+    align-items: center;
+}
+.logo{
+    color:#0a0ac2;
+    text-decoration: none;
+    
+}
+
+img{
+    width: 15%;
+    margin-top: 20%;
+}
+
+nav ul{
+    display: inline-flex;
+    list-style:none;
+}
+
+nav ul li a{
+    margin-right: 2rem;
+    text-decoration: none;
+    color:#334;
+}
+
+.submenu{
+    display: none;
+}
+
+nav ul li:hover .submenu{
+    display: block;
+    position:absolute;
+    background-color:white;
+}
+
+nav ul li:hover .submenu ul{
+    display: block;
+}
+
+
+nav ul li:hover .submenu ul li{
+    width: 150px;
+    text-align:center;
+    border-radius:10 px;
+    transition: 0.7s;
+}
+
+nav ul li:hover .submenu ul li:hover{
+    color:#0a0ac2;
+    text-align:center;
+    border-radius:10 px;
+    transition: 0.7s;
+}
+
+a:hover{
+    color:#0a0ac2;
+}
+
+
+    
