--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 
-
+ /*principal*/
+ 
 *{
     font-family: 'Chivo Mono';
     margin:0; 
@@ -16,39 +17,63 @@ html{
     scroll-behavior: smooth;
 }
 
-.navbar{
-    padding:2rem 10%;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    background:#FFFF;
-    border-bottom: .2rem solid #334;
-    position:relative;
-}
+/*header*/
 
-a.logo{
-    align-items: center;
-}
+header{
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    right: 0px;
+    margin: 0;
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+}    
+
+
 .logo{
     color:#0a0ac2;
     text-decoration: none;
-    
+    display: flex;
+	justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 img{
-    width: 15%;
-    margin-top: 20%;
+    width: 20%;
+    display: flex;
+	justify-content: center;
+}
+
+.navbar{
+    min-height: 70px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 32px;
+    box-shadow: 0 -1px 0 0 rgb(255, 255, 255);
+
+}
+
+.nav-menu{
+    display: flex;
+    align-items: center;
+    gap:30px;
 }
 
 nav ul{
     display: inline-flex;
     list-style:none;
+   
 }
 
 nav ul li a{
     margin-right: 2rem;
-    text-decoration: none;
-    color:#334;
+    text-decoration: none; 
+    color:#FFFF;
+    transition: 0.5s ease;
 }
 
 .submenu{
@@ -58,7 +83,6 @@ nav ul li a{
 nav ul li:hover .submenu{
     display: block;
     position:absolute;
-    background-color:white;
 }
 
 nav ul li:hover .submenu ul{
@@ -71,6 +95,8 @@ nav ul li:hover .submenu ul li{
     text-align:center;
     border-radius:10 px;
     transition: 0.7s;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 nav ul li:hover .submenu ul li:hover{
@@ -78,11 +104,387 @@ nav ul li:hover .submenu ul li:hover{
     text-align:center;
     border-radius:10 px;
     transition: 0.7s;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 a:hover{
     color:#0a0ac2;
 }
 
+.menu3barras{
+    display: none;
+    cursor:pointer;
+}
 
+.bar{
+    display: block;
+    width: 28px;
+    height: 3px;
+    border-radius: 2px;
+    margin: 5px auto;
+    background-color: #FFFF;
+    transition: all 0.3s ease-in-out;
+}
+
+ /*--------------------*/
+
+
+ /*homepage */
+
+.container_homeimg{
+    height: 750px;
+}
+
+.img_home {
+    margin-top: 0%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container_hometexto {
+    color: rgb(255, 255, 255);
+    font-size: 3vw;
+    width: 50%;
+    margin-left: 10%;
+    margin-top: 15%;
+    position: absolute;
+}
+
+/*apresentação*/
+
+ .container_apresentacao {
+    color: black;
+    width: 60%;
+    margin-left: 7%;
+    font-size: 15pt;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    text-align: justify;
+}
+
+
+/*slider galeria */
+
+.container_slidetext {
+    color: rgb(2, 2, 2);
+    font-size: 35pt;
+    width: 100%;
+    text-align: center;
+}
+
+.mySlides {
+    width: 96%;
+    position: relative;
+    text-align: center;
+    height: 91%;
+    margin-left: 2%;
+    top: 4%;
+}
+
+.container_slideshow {
+    width: 50%;
+    position: relative;
+    background-color: #0e87c4;
+    margin-left: 25%;
+    height: 500px;
+    margin-top: 2%;
+}
+
+.img_slide {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+/*mapa */
+
+.container_maptext{
+    color: rgb(2, 2, 2);
+    font-size: 15pt;
+    width: 100%;
+    margin-top: 10%;
+    text-align: center;
+}
+
+.container_map{
+    width: 125%;
+}
+
+iframe{
+    width: 80%;
+    height: 500px;
+    margin-top: 2%;
+}
+
+
+
+
+/*sobre nos */
+
+.imagem-esquerda{
+    width: 30%; 
+    height: 50%;
+    float: left; 
+    border-radius: 50%;
+    border: 6px solid black;
+    margin-top: 3%;
+    margin-left: 15%;
+}
+
+.imagem-direita{
+    width: 30%; 
+    height: 50%;
+    border-radius: 50%;
+    border: 6px solid black;
+    margin-top: 3%;
+    margin-left: 55%;  
     
+}
+
+.text-container {
+    display: flex;
+    margin-top: 9px;
+    margin-bottom: 45px;
+}
+
+.texto-esquerda{
+    display: inline-block;
+    margin-right: 26%;
+    margin-left: 22%;
+
+}
+
+/*orcamentos */
+
+fieldset{
+    border: 1px black solid;
+    margin-right: 5%;
+    margin-left: 47%;
+    margin-top: 6%;
+}
+
+
+.boxEsquerda{
+    float: left;
+    margin-right: 10%;
+    margin-bottom: 15%;
+}
+
+
+.boxDireita{
+    float: left;
+    margin-top: 50%;
+}
+
+.textboxEsquerda{
+    margin-left: 34%;
+}
+
+
+
+input,select,textarea{
+    width: 97%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    color: gray;
+}
+
+input[type=text]:focus {
+    border: 3px solid #555;
+}
+input[type=email]:focus {
+    border: 3px solid #555;
+}
+textarea:focus {
+    border: 3px solid #555;
+}
+
+small{
+    color:red;
+    margin-left: 1%;
+}
+
+.form{
+    margin-bottom: 5%;
+}
+
+#botao{
+    background-color: gray;
+    border: none;
+    color: white;
+    padding: 9px 149px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    margin-left: 4%;
+    margin-left: 60%;
+    margin-top: 1%;
+}
+
+#botao:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#messagemSucesso{
+    font-size: 30px;
+    margin-top: 11%;
+}
+
+
+
+/*botao para voltar para cima*/
+
+.botao{
+    text-decoration: none;
+    color:white;
+    background: #000000;
+    opacity: 0.8;
+    padding: 10px;
+    position:fixed;
+    right: 30px;
+    bottom: 0px;
+}
+
+#icon-botaotop{
+    size: 20px;
+}
+
+/*footer*/
+
+ .footer{
+    width: 100%;
+    background-color: #262626;
+    margin-top: -0.4%;
+    display: inline-block;
+    margin-bottom: -1%;
+    height: 200px;
+ }
+
+ .timer{
+    margin-top: -9%;
+    margin-left: 43%;
+ }
+
+ .contacto{
+    color: white;
+    margin-top: 2%;
+    margin-left: 25%;
+    margin-right: 20%;
+    float: left;
+ }
+
+ .horario{
+    color: white;  
+    margin-top: 2%;
+    float: left;
+ }
+
+
+
+
+ /*menu de 3 barras responsivo */
+@media only screen and (max-width:780px){
+    .menu3barras{
+        display: block;
+    }
+    /*transformar as 3 barras para um X usando o javascript  */
+    .menu3barras.active .bar:nth-child(2)
+    {
+        opacity:0;
+    }
+    .menu3barras.active .bar:nth-child(1)
+    {
+        transform: translateY(8px) rotate(-45deg);
+    }
+    .menu3barras.active .bar:nth-child(3)
+    {
+        transform: translateY(-8px) rotate(45deg);
+    }
+
+    .nav-menu{
+        position:fixed;
+        left: -100%;
+        top:70px;
+        gap:0;
+        border-radius: 0 0 20px 20px;
+        text-align: center;
+        flex-direction: column;
+        width: 100%;
+        transition: 0.3s;
+        font-size: 20px;
+    }
+
+
+    li{
+        margin: 16px 0;
+    }
+
+    .nav-menu.active{
+        left:0;
+        background-color: #334;
+    }
+ 
+
+
+
+    /*orcamento */
+    .boxEsquerda {
+        float: none;
+        margin-right: 26%;
+        margin-bottom: 5%;
+        margin-top: 6%;
+    }
+
+    fieldset{
+        border: 1px black solid;
+        margin-right: 6%;
+        margin-left: 7%;
+        margin-top: 5%;
+    }
+    #botao {
+        background-color: gray;
+        border: none;
+        color: white;
+        padding: 8px 141px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
+        cursor: pointer;
+        -webkit-transition-duration: 0.4s;
+        transition-duration: 0.4s;
+        margin-left: 4%;
+        margin-left: 20%;
+        margin-top: 1%;
+    }
+    #botao:hover {
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    }
+    
+
+   /* FOOTER */
+    .contacto{
+       color: white;
+       margin-top: 2%;
+       margin-left: 15%;
+       margin-right: 9%;
+       float: left;
+    }
+    
+    
+
+}
